[package]
name = "another-compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.6"
pest_derive = "2.5.6"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
llvm-sys = "120.2.6"
anyhow = "1.0"
walkdir = "2.3"
cargo-watch = "8.4.0"
